Bug 74622 - EDITING: comparing a string cell copied from another Calc document with an equal string cell in this document does not yield equal
Summary: EDITING: comparing a string cell copied from another Calc document with an eq...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:4.3.0 target:4.2.1
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-06 15:29 UTC by David Clayton
Modified: 2014-04-08 13:46 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Source data with preceding ' (29.00 KB, application/vnd.ms-excel)
2014-02-06 15:29 UTC, David Clayton
Details
Test case document where lookup fails without save and open (40.35 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-02-06 15:30 UTC, David Clayton
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Clayton 2014-02-06 15:29:23 UTC
Created attachment 93539 [details]
Source data with preceding '

Hi all,

Please see the attached test case documents. 

1) There are source data columns in an xls with numbers stored with a preceding ' select these and copy the data.
2) Open the V looup test case document and past into the top cells enclosed by the yellow.

Expected behaviour - the v looup fields in below should populate, instead they remain with status of #NA

Solution - once pasted data into top cells, save the spreadsheet and re-open. Result is expected behaviour - the #NA has gone and the V lookup works. (No changes to the cell formatting done by the user).

I have only noticed this from 4.2
Comment 1 David Clayton 2014-02-06 15:30:31 UTC
Created attachment 93540 [details]
Test case document where lookup fails without save and open
Comment 2 Eike Rathke (retired, only occasionally showing up) 2014-02-06 16:19:29 UTC
Confirmed. This is only if copy-pasted, not if manually entered.
Comment 3 Commit Notification 2014-02-07 20:31:19 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bba69a3449598eddc465e3467e52ff975fd81938

resolved fdo#74622 re-intern shared strings copied between documents



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Eike Rathke (retired, only occasionally showing up) 2014-02-07 20:45:25 UTC
Pending review for 4-2 at https://gerrit.libreoffice.org/7937
Comment 5 Commit Notification 2014-02-07 21:06:53 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0d8253bc17cb5476fb558c0e17f5422d76f3e3db&h=libreoffice-4-2

resolved fdo#74622 re-intern shared strings copied between documents


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 David Clayton 2014-03-06 15:28:34 UTC
Hi,

I haven't seen this fix come through on either:
https://wiki.documentfoundation.org/Releases/4.2.2/RC1
or
https://wiki.documentfoundation.org/Releases/4.2.1/RC1
Have I missed its inclusion?
Comment 7 Eike Rathke (retired, only occasionally showing up) 2014-03-07 11:53:46 UTC
? It's in https://wiki.documentfoundation.org/Releases/4.2.1/RC1 currently number 98.
Comment 8 David Clayton 2014-03-07 12:06:37 UTC
Hi Eike,
I installed 4.2.2.1
Opened the V_lookup_test_case.ods that I first attached to this bug. Opened the sample data, and pasted in as before. I still get #N/A in the lookup cells. To resolve I attempted to format the cells as text, but this made no difference. The only way to get the lookup to work was to format a cell as text and then manually key in the number. Therefore either it hasn't been fixed for this case, or there is a different error.

David
Comment 9 Eike Rathke (retired, only occasionally showing up) 2014-03-07 13:13:33 UTC
Odd, I just tried in my (self-compiled) 4.2.2 and it works.
Help->About says
Build ID: 2ce63885fefe1e9a0fdf1ee983d9d19aa1426063
which is the latest commit on that branch and it includes the fix 0d8253bc17cb5476fb558c0e17f5422d76f3e3db

What do you have there as build ID?
Comment 10 David Clayton 2014-03-07 13:20:21 UTC
Build ID: 3be8cda0bddd8e430d8cda1ebfd581265cca5a0f
Comment 11 Eike Rathke (retired, only occasionally showing up) 2014-03-07 13:48:45 UTC
That's the tag commit on the same branch one above my build ID. Strange.
See also http://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=3be8cda0bddd8e430d8cda1ebfd581265cca5a0f
On the second page you'll find my commit
2014-02-07	resolved fdo#74622 re-intern shared strings copied between documents
Comment 12 Eike Rathke (retired, only occasionally showing up) 2014-03-07 14:00:22 UTC
Which platform are you on and what was the download archive name, and if you still have it around its MD5 sum?
Comment 13 David Clayton 2014-03-07 14:18:46 UTC
Windows 7x32. 

Downloaded from http://donate.libreoffice.org/home/dl/win-x86/4.2.2/en-GB/LibreOffice_4.2.2.1_Win_x86.msi 

Sorry I don't have an MD5 sum, but could get one if required.
Comment 14 David Clayton 2014-04-07 09:06:47 UTC
Hi,

I have tried this on Version: 4.2.3.2 and am still having to save and re-open the test case document for the lookup to populate. Could someone try on a Windows machine to confirm and possibly re-open.
Comment 15 Eike Rathke (retired, only occasionally showing up) 2014-04-07 14:28:30 UTC
I just installed 4.2.3.3 in a VirtualBox and it works. The #N/A are resolved to actual data as soon as I paste the data.
Comment 16 David Clayton 2014-04-08 13:46:39 UTC
Hi Eike, thanks for the prompt reply. in case the problem is specific to my local machine I'll try on another and report back.