resolved fdo#74622 re-intern shared strings copied between documents

(cherry picked from commit bba69a3449598eddc465e3467e52ff975fd81938)

Conflicts:
	sc/source/core/data/column4.cxx

Change-Id: I64719e12be1f1c61bc86c99f1698f35db87d97be
Reviewed-on: https://gerrit.libreoffice.org/7937
Tested-by: Kohei Yoshida <libreoffice@kohei.us>
Reviewed-by: Kohei Yoshida <libreoffice@kohei.us>